# makfile_learn

./: README.md
CMake简明教程/c11_configure-file/: CMakeLists.txt  config.h.in
CMake简明教程/c13_添加库文件/: CMakeLists.txt  tutorial.cxx
CMake简明教程/c15_cpack/: CMakeLists.txt
CMake简明教程/c16-生成静态库并链接/: CMakeLists.txt
CMake简明教程/c17_条件语句/: CMakeLists.txt
CMake简明教程/c18_option/: .CMakeLists.txt.swp  CMakeLists.txt
CMake简明教程/c19_指定编译器/: CMakeLists.txt  LICENSE  README.md  main.c
CMake简明教程/c2/: main.c
CMake简明教程/c20_设置编译器选项/: CMakeLists.txt
CMake简明教程/c26-检测处理器体系结构/: .CMakeLists.txt.swp
CMake简明教程/c26_检测处理器体系结构/: CMakeLists.txt
CMake简明教程/c27_cmake_host_system_information/: CMakeLists.txt
CMake简明教程/c29_为Eigen库使能向量化/: .CMakeLists.txt.swp  CMakeLists.txt  linear-algebra.cpp
CMake简明教程/c3/: CMakeLists.txt  main.c
CMake简明教程/c32_mpi/: mpi_hello
CMake简明教程/c33_检测Eigen库/: .linear-algebra.cpp.swp
CMake简明教程/c4/: CMakeLists.txt  CMakeLists1.txt
CMake简明教程/c5_1正规一点的组织结构/include/: testFunc1.h
CMake简明教程/c5_1正规一点的组织结构/src/: main.cpp  testFunc.cpp  testFunc1.cpp
CMake简明教程/c5_正规一点的组织结构/: CMakeLists.txt
CMake简明教程/c7_对库进行链接/: .CMakeLists.txt.swp  CMakeLists.txt
CMake简明教程/c8_添加编译选项/: CMakeLists.txt
CMake简明教程/c9_添加控制选项/: CMakeLists.txt
CMake简明教程/c9_添加控制选项/src/: CMakeLists.txt  main1.c  main2.c
CMake简明教程/example/c1/: CMakeLists.txt
CUDA-Programming-master/src/02-thread-organization/: CMakeLists.txt  a.out  hello5.cu  hello6.cu
CUDA-Programming-master/src/02-thread-organization/temp/: a.out  hello55.cu
CUDA-Programming-master/src/03-basic-framework/: a.out  add.cpp  add1.cu  add3if.cu
CUDA_Freshman/0_hello_world/: CMakeLists.txt  Makefile  helloCuda
CUDA_Freshman/1_check_dimension/: CMakeLists.txt  Makefile  dim
CUDA_Freshman/2_grid_block/: CMakeLists.txt  Makefile  dim
OpenMP/demo1/: readme.md  test  test.cpp
OpenMP/demo2/: test  test.cpp
OpenMP/demo3/: test  test.cpp
cmake-cookbook/chapter-01/recipe-03/cxx-example/: .CMakeLists.txt.swp  CMakeLists.txt
cmake-cookbook/chapter-02/recipe-04/cxx-example/: CMakeLists.txt
cmake-cookbook/chapter-06/recipe-05/cxx-example/: CMakeLists.txt  VERSION
hello2/: Makefile1
hello5/: .Makefile.swp  Makefile1  add.c  main
makefile/hello2/: Makefile  hello.c
makefile/hello4/: add.c  main.c  sub.c
makefile/hello5/: Makefile  add_sub.h  sub.c
makefile/makefile2024/Learn-Makefiles/: Readme.md
makefile/makefile2024/Learn-Makefiles/code/1/: blah
makefile/makefile2024/Learn-Makefiles/code/2/: Makefile
makefile/makefile2024/Learn-Makefiles/code/4/: Makefile
makefile/makefile2024/Learn-Makefiles/code/5/: Makefile
makefile/makefile2024/Learn-Makefiles/code/8/: Makefile
makefile/makefile2024/Learn-Makefiles/code/9/: Makefile
makefile/makefile2024/Makefile(超详细一文读懂)/: Readme  Readme.md
makefile/makefile2024/Makefile(超详细一文读懂)/1/: Makefile
makefile/makefile2024/Makefile(超详细一文读懂)/2/: Makefile  div.c  operations.h  sub.c
makefile/makefile2024/Makefile(超详细一文读懂)/3/: Makefile  app  main.c
makefile/makefile2024/Makefile(超详细一文读懂)/4/: Makefile  add.c
makefile/makefile2024/Makefile(超详细一文读懂)/5/: Makefile  multi.c
makefile/makefile2024/Makefile从入门到上手/1/: Makefile
makefile/makefile2024/Makefile从入门到上手/10/: Makefile  sub.c
makefile/makefile2024/Makefile从入门到上手/11/: Makefile  Readme  Readme.md  a.out
makefile/makefile2024/Makefile从入门到上手/11/src/: sub.c
makefile/makefile2024/Makefile从入门到上手/2/: Makefile
makefile/makefile2024/Makefile从入门到上手/3/: Makefile  add.c
makefile/makefile2024/Makefile从入门到上手/4/: Makefile  a.out
makefile/makefile2024/Makefile从入门到上手/5/: Makefile  a.out
makefile/makefile2024/Makefile从入门到上手/6/: Makefile  hello.c
makefile/makefile2024/Makefile从入门到上手/7/: Makefile  div.c  head.h
makefile/makefile2024/Makefile从入门到上手/9/: Makefile
temp/CMake简明教程/c1/: CMakeLists.txt
temp/CMake简明教程/c10_定义宏来控制打印的信息/: CMakeLists.txt  main.c
temp/CMake简明教程/c3/: CMakeLists1.txt
temp/CMake简明教程/c6_动态库和静态库的编译控制/: CMakeLists.txt
temp/CMake简明教程/c7_对库进行链接/src/: main.c
temp/CMake简明教程/c8_添加编译选项/: main.cpp
博客园/C12_CMake基础 第12节 设置C++标准/c1/: CMakeLists.txt
博客园/C1_初识CMake/: main.cpp
博客园/c3/: c3.kdev4
博客园/c3/.kdev4/: c3.kdev4
博客园/c3/src/: Hello.cpp
编译与链接/c++ 动态库/: dlib.c  run.sh  test.c
编译与链接/gcc 经历了什么/: a.out  test.cc  test.i  test.s
编译与链接/linux中的nm命令简介/1/: main.c  test.c
编译与链接/linux中的nm命令简介/2/: a.out  main.c
编译与链接/谈谈程序链接及分段那些事/1/: test  testlink.c
编译与链接/谈谈程序链接及分段那些事/2/: test  testlink.c
编译与链接/谈谈程序链接及分段那些事/3/: a.out  main.c
